--- a/GestionHotel-Core/pom.xml
+++ b/GestionHotel-Core/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/>
     </parent>
     <groupId>com.cocot3ro.gestionhotel</groupId>
-    <artifactId>Core</artifactId>
+    <artifactId>GestionHotel-Core</artifactId>
     <version>1.1.0</version>
-    <name>Core</name>
-    <description>Core</description>
+    <name>GestionHotel-Core</name>
+    <description>GestionHotel-Core</description>
     <url/>
     <licenses>
         <license/>
