--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - main
     types:
       - closed
+  workflow_dispatch:
 
 jobs:
   build-linux:
@@ -75,7 +76,7 @@ jobs:
       working-directory: ./GestionHotel-Core
       run: |
         jpackage --type msi --input target/ --main-jar GestionHotel-Core.jar --main-class com.cocot3ro.gestionhotel.core.GestionHotelCoreApplication --name "GestionHotel Core" --dest target/installer
-        
+
         jpackage --type exe --input target/ --main-jar GestionHotel-Core.jar --main-class com.cocot3ro.gestionhotel.core.GestionHotelCoreApplication --name "GestionHotel Core" --dest target/installer
 
     - name: Upload MSI & EXE Installers
