--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
         --dest target/installer
 
     - name: Upload DEB & RPM Installers
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: BuildArtifacts
         path: |
@@ -80,7 +80,7 @@ jobs:
         jpackage --type exe --input target/ --main-jar GestionHotel-Core.jar --main-class com.cocot3ro.gestionhotel.core.GestionHotelCoreApplication --name "GestionHotel Core" --dest target/installer
 
     - name: Upload MSI & EXE Installers
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: BuildArtifacts
         path: |
@@ -109,6 +109,7 @@ jobs:
       run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
     - name: Create GitHub Release
+      id: create-release
       uses: actions/create-release@v1
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -123,3 +124,35 @@ jobs:
           GestionHotel-Core/target/installer/*.exe
           GestionHotel-Core/target/installer/*.deb
           GestionHotel-Core/target/installer/*.rpm
+
+    - name: Upload MSI Installer to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create-release.outputs.upload_url }}
+        asset_path: GestionHotel-Core/target/installer/*.msi
+        asset_name: GestionHotel-Core-v${{ env.VERSION }}.msi
+        asset_content_type: application/x-msi
+
+    - name: Upload EXE Installer to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create-release.outputs.upload_url }}
+        asset_path: GestionHotel-Core/target/installer/*.exe
+        asset_name: GestionHotel-Core-v${{ env.VERSION }}.exe
+        asset_content_type: application/x-msdownload
+
+    - name: Upload DEB Installer to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create-release.outputs.upload_url }}
+        asset_path: GestionHotel-Core/target/installer/*.deb
+        asset_name: GestionHotel-Core-v${{ env.VERSION }}.deb
+        asset_content_type: application/vnd.debian.binary-package
+
+    - name: Upload RPM Installer to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create-release.outputs.upload_url }}
+        asset_path: GestionHotel-Core/target/installer/*.rpm
+        asset_name: GestionHotel-Core-v${{ env.VERSION }}.rpm
+        asset_content_type: application/x-rpm
