--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,9 @@ jobs:
     - name: Get project version
       id: get-version
       working-directory: GestionHotel-Core
-      run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" | Out-File -Append -FilePath $env:GITHUB_ENV
+      run: |
+        $version = (mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
     - name: Generate MSI & EXE Installers
       working-directory: ./GestionHotel-Core
