--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,10 +82,10 @@ jobs:
 
     - name: Get project version
       id: get-version
-      working-directory: GestionHotel-Core
+      working-directory: myJavaMavenProyect
       run: |
-        $version = (mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        for /f "delims=" %%i in ('mvn help:evaluate -Dexpression=project.version -q -DforceStdout') do set version=%%i
+        echo VERSION=%version% >> $GITHUB_ENV
 
     - name: Generate MSI & EXE Installers
       working-directory: ./GestionHotel-Core
