--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,15 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
+    - name: Get project version test
+      id: get-version-test
+      working-directory: GestionHotel-Core
+      shell: cmd
+      run: |
+        mvn help:evaluate -Dexpression=project.version -q -DforceStdout > version.tmp
+        set VERSION=<version.tmp
+        echo VERSION=%version% >> %GITHUB_ENV%
+
     - name: Build with Maven
       working-directory: ./GestionHotel-Core
       run: mvn clean package
@@ -91,6 +100,7 @@ jobs:
 
     - name: Generate MSI & EXE Installers
       working-directory: ./GestionHotel-Core
+      shell: cmd
       run: |
         jpackage --type ${{ matrix.package_type }} ^
         --input target/ ^
