--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,31 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  get-version-project:
+    runs-on: ubuntu-latest
+    outputs:
+        version: ${{ steps.get-version.outputs.version }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Get Version
+        working-directory: GestionHotel-Core
+        id: get-version
+        run: echo "version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
+
   build-linux:
     runs-on: ubuntu-latest
-    
+
+    needs: get-version-project
+
     # if: github.event.pull_request.merged == true
 
     strategy:
@@ -60,6 +82,8 @@ jobs:
   build-windows:
     runs-on: windows-latest
 
+    needs: get-version-project
+
     # if: github.event.pull_request.merged == true
 
     strategy:
@@ -76,16 +100,10 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
-    - name: Get project version test
-      id: get-version-test
-      working-directory: GestionHotel-Core
-      shell: cmd
-      run: | # This runs on Windows
-        echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
     - name: Check Version
       run: |
-        echo VERSION=${{ env.VERSION }}
+        echo VERSION=${{ steps.get-version-project.outputs.version }}
+        echo VERSION=${{ steps.get-version-project.outputs.version }} >> $GITHUB_ENV
 
     - name: Build with Maven
       working-directory: ./GestionHotel-Core
